Bug 1629389 - Null check in the destructor of MediaStreamWindowCapturer. r=alwu

Connecting to a capture track can return `nullptr`, this needs to be handled:
https://searchfox.org/mozilla-central/rev/72e3388f74458d369af4f6cdbaeaacb719523b8c/dom/media/MediaTrackGraph.cpp#3756

Differential Revision: https://phabricator.services.mozilla.com/D70810